--- a/Actividad 3.3.1.html
+++ b/Actividad 3.3.1.html
@@ -20,7 +20,7 @@
     <div class="imagen">
      
         <div class="texto"> 
-           <img src="WhatsApp Image 2023-07-30 at 1.35.55 PM.jpeg" alt="">
+           <img src="foto.jpeg" alt="">
            <div class="presentación"></div> <h2 >Hola!</h2>
            <h1>Soy Hugo Desiderio</h1>
            <h2>Desarrollador Web</h2></div> 
@@ -35,13 +35,13 @@
            y traducirlas en soluciones digitales. Valorando la colaboración, entrego proyectos de alta calidad 
         trabajando tanto de forma independiente como en equipos multidisciplinarios.</p></div>
 <div class="habilidades"><h1>Mis Habilidades</h1>
- <img src="HTML5_logo_and_wordmark.svg.png" alt="">
+ <img src="HTML5_logo.png" alt="">
 <img src="CSS-Logo.png" alt="">
-<img class="java" src="JavaScript-Symbol.png" alt="">
+<img class="java" src="JavaScript_icon.png" alt="">
 </div>
 
 <div id="Experiencia"><h1>Experiencia</h1>
-<img src="WhatsApp Image 2023-07-13 at 11.21.38 PM.jpeg" alt="">
+<img src="inicio_sesion.jpeg" alt="">
 <img src="registro.jpeg" alt="">
 <p>He trabajado en el diseño y desarrollo de interfaces de inicio de sesión de usuario. 
      Mi enfoque se centra en la usabilidad y la estética, asegurando que los usuarios tengan 
@@ -50,8 +50,8 @@
 
  <div id="Educación">
     <h1>Educación</h1>
-    <img src="descarga.png" alt="">
-    <img src="images.jpeg" alt="">
+    <img src="JAP_logo.png" alt="">
+    <img src="LIC.jpeg" alt="">
     <h2 class="Jap">Cursando fase 1( parte 2)</h2><h2 class="lic">Aún Cursando</h2>
    <div class="ver"><p class="jap">Actualmente, estoy cursando el programa "Jóvenes a Programar", una iniciativa que busca 
     promover el aprendizaje de habilidades de programación entre jóvenes entusiastas. A través de este programa, he tenido la
@@ -75,8 +75,8 @@
  <div id="Contacto">
     <h1>Contacto</h1>
     <img src="Gmail_icon_(2020).svg.png" alt="">
-    <img src="instagradientlogo-no-background.png" alt="">
-    <img src="descarga (1).png" alt="">
+    <img src="Instagram_logo.png" alt="">
+    <img src="Github_icon.png" alt="">
    <h3 class="correo">
     <a href="mailto:hugojavierdesideriomatinez@gmail.com" target="_blank">Enviar correo</a></h3>
     <h3 class="insta"><a target="_blank" href="https://www.instagram.com/bracafe_0/">instagram</a> </h3>
