--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="Actividad 3.3.1.css">
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
     <div class="Menu" ><section>  <!--Este es el div del menu de arriba a la izquierda que nos lleva por la pagina si precionamos en cada uno de ellos -->
