--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
  </div>   
  <div id="Contacto">
     <h1>Contacto</h1>
-    <img src="Gmail_icon_(2020).svg.png" alt="">
+    <img src="Gmail_icon.png" alt="">
     <img src="Instagram_logo.png" alt="">
     <img src="Github_icon.png" alt="">
    <h3 class="correo">
