--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="imagen">
      
         <div class="texto"> 
-           <img src="foto.jpeg" alt="">
+           <img src="foto.png" alt="">
            <div class="presentación"></div> <h2 >Hola!</h2>
            <h1>Soy Hugo Desiderio</h1>
            <h2>Desarrollador Web</h2></div> 
